--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "^5.8.0",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
+    "into-stream": "^4.0.0",
     "jquery": "^3.3.1",
     "morgan": "~1.9.0",
     "popper.js": "^1.14.4",
